# fairguard

./: .env.example  .gitignore  .gitlab-ci.yml  PROJECT_README.md  README.md  RUN_GUIDE.md  docker-compose.yml  patch.py  run_problem.txt
.github/workflows/: fairguard-check.yml
backend/: .env.example  alembic.ini  main.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/api/v1/: audits.py  auth.py  contracts.py  projects.py  receipts.py  runtime.py
backend/app/: celery_app.py  main.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  api_key.py  audit.py  contract.py  notification.py  project.py  receipt.py  runtime.py  user.py
backend/app/schemas/: api_key.py  audit.py  auth.py  contract.py  notification.py  project.py  receipt.py  runtime.py
backend/app/services/: fairness.py  notifications.py  receipt.py  reports.py  runtime.py
backend/app/tasks/: __init__.py  audit_tasks.py  notification_tasks.py  runtime_tasks.py
backend/core/: auth.py  config.py  database.py  schemas.py
backend/models/: db.py
backend/services/: alerts.py  fairness.py  runtime_monitor.py  signing.py
cli/: README.md  pyproject.toml
cli/src/fairguard_cli/: client.py  config.py  main.py
cli/src/fairguard_cli/commands/: receipts.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/nginx/: nginx.conf
docs/: api-reference.md  ci-examples.md  usage-guide.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: audits.ts  auth.ts  client.ts  contracts.ts  projects.ts  receipts.ts  runtime.ts
frontend/src/pages/: AuditDetailPage.tsx  AuditPage.tsx  (+8 more)
sdk/: README.md  pyproject.toml
sdk/src/fairguard_sdk/: __init__.py  client.py  types.py
(+21 files in other folders)
