[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fairguard-cli"
version = "1.0.0"
description = "FairGuard AI Fairness Firewall CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
fairguard = "fairguard_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fairguard_cli"]
