[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fairguard-sdk"
version = "0.1.0"
description = "FairGuard Python SDK"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
