[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fairguard-sdk"
version = "1.0.0"
description = "FairGuard Python SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pandas>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fairguard_sdk"]
